src/shared/ui-kit/modal/modal.module.scss
@import '@/styles/variables.scss';

.root {
  overflow: hidden;
}

.overlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.32);
  z-index: 1;
}

.modal {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  padding: 25px;
  background-color: $color-base-0;
  width: 100%;
  min-height: 200px;
  min-width: 320px;
  max-width: 90%;
  max-height: 90%;
  border-radius: 24px;

  box-shadow: 0px 25px 45px 0px #3456fb33;
}

.modalHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;

  h2 {
    margin: 0;
  }
}

.modalHeader,
.modalContent {
  position: relative;
  z-index: 1;
}

.modalTitle {
  margin: 0;
  font-size: 40px;
  font-weight: 500;
}

.modalCloseBtn {
  cursor: pointer;
  padding: 0;
  border: none;
  background-color: transparent;
  outline: none;
  height: 24px;
  width: 24px;
  position: absolute;
  right: 0;
  top: 0;
}

.ellipsisOverlay {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  min-height: 200px;
  min-width: 320px;
  width: 100%;
  height: 100%;
  border-radius: 24px;
  overflow: hidden;
}

.ellipsisTop {
  position: absolute;
  right: -5%;
  top: -130px;
  width: 55%;
  max-width: 400px;
}

.ellipsisBottom {
  position: absolute;
  left: -80px;
  bottom: -130px;
  width: 60%;
  max-width: 400px;
}

.extraSmallWidth {
  max-width: 300px;
}

.smallWidth {
  max-width: 400px;
}

.mediumWidth {
  width: 672px;
}

.mediumModal {
  width: 800px;
}

.largeWidth {
  max-width: 70%;
}

.extraSmallWidth {
  max-width: 90%;
}

